[gd_scene load_steps=9 format=3 uid="uid://b5ic2ksi62htr"]

[ext_resource type="Script" uid="uid://d4b54clnm6sc8" path="res://Starting Page/starting_page.gd" id="1_ahfb2"]
[ext_resource type="Texture2D" uid="uid://bpmktpk4sufv8" path="res://Starting Page/FreeAssetBackground.webp" id="1_ddp1b"]
[ext_resource type="FontFile" uid="uid://dqi4uqyjhr444" path="res://Starting Page/Å ifras_Pavadinimui.ttf" id="2_nse6w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nse6w"]
texture = ExtResource("1_ddp1b")
modulate_color = Color(0.473976, 0.473976, 0.473976, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nse6w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nse6w"]
bg_color = Color(0.662452, 0.662452, 0.662452, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahfb2"]
bg_color = Color(0.43134, 0.43134, 0.43134, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65pb8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="StartingPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahfb2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nse6w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -17.0
offset_right = 156.5
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nse6w")
theme_override_styles/hover = SubResource("StyleBoxFlat_nse6w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ahfb2")
theme_override_styles/normal = SubResource("StyleBoxFlat_65pb8")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nse6w")
theme_override_styles/hover = SubResource("StyleBoxFlat_nse6w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ahfb2")
theme_override_styles/normal = SubResource("StyleBoxFlat_65pb8")
text = "Options
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_nse6w")
theme_override_styles/hover = SubResource("StyleBoxFlat_nse6w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ahfb2")
theme_override_styles/normal = SubResource("StyleBoxFlat_65pb8")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -214.0
offset_right = 149.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_nse6w")
theme_override_font_sizes/font_size = 135
text = "Tea Tale"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_bsettings_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_3_pressed"]
